@@ -13,6 +13,9 @@ ikiwiki (3.11) UNRELEASED; urgency=low
     error.
   * inline: Display a handy error message if the inline cannot display any
     pages due to such an error.
+  * comments: Add link to comment post form to allow user to sign in
+    if they wish to, if the configuration makes signin optional
+    for commenting.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 21 Apr 2009 21:41:38 -0400
 
